--- a/1.16.1/build.gradle
+++ b/1.16.1/build.gradle
@@ -16,6 +16,8 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url = "https://maven.shedaniel.me/" }
+	maven { url = "https://maven.queerbric.cc/releases" }
 }
 
 dependencies {
@@ -25,8 +27,8 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+	// modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	implementation files('libs/speedrunapi-1.2.1+1.16.1.jar')
 }
 
 processResources {
